package tech.article.listener.v4;

public class Supervision {

    public void hostChanged(String hostname) {
        // Implementation...
    }

    public void loginChanged(String login) {
        // Implementation...
    }

}
